--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ padding: 2rem 1rem;
   color: var(--color-blue-dark);
 }
 .text-purple{
-  color: var(--color-purple);
+  color: var(--color-purple-dark);
 }
 .text-lg{
   font-size:1.25rem ;
